# oxideav-jpegxl

./: CHANGELOG.md  Cargo.toml  README.md  SPEC_BLOCKED.md  round17-d1-bisect.md  round18-d1-per-token.md  round19-d1-cluster.md  round20-d1-hfmeta.md  round21-d1-distbisect.md  round22-d1-sampledump.md  round23-d1-leafpick.md  round24-d1-disttrace.md  round25-d1-samplerange.md
.github/workflows/: fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: libjxl_encode_oxideav_decode.rs
fuzz/src/: lib.rs
src/: abrac.rs  afv.rs  ans_encoder.rs  begabrac.rs  bitreader.rs  bitwriter.rs  block_context_resolver.rs  block_dequant.rs  chroma_from_luma.rs  coeff_order.rs  container.rs  cross_pass.rs  dct_quant_weights.rs  dct_select.rs  encoder.rs  epf.rs  error.rs  extensions.rs  frame_header.rs  gaborish.rs  global_modular.rs  hf_coeff_histogram_size.rs  hf_coefficient_histograms.rs  hf_dequant.rs  hf_global.rs  hf_global_section.rs  hf_pass.rs  icc.rs  idct.rs  image.rs  lf_dequant.rs  lf_global.rs  lf_group.rs  lib.rs  llf_from_lf.rs  matree.rs  metadata.rs  metadata_fdis.rs  modular.rs  modular_fdis.rs  (+18 more)
src/ans/: alias.rs  cluster.rs  distribution.rs  hybrid.rs  hybrid_config.rs  mod.rs  prefix.rs  symbol.rs
tests/: cjxl_gray_64x64.rs  cjxl_grey_8x8.rs  cjxl_grey_8x8_trace.rs  encode_djxl_roundtrip.rs  encode_roundtrip.rs  gradient_64x64_trace.rs  r126_wp_intermediates_at_194.rs  r191_wp_trace_oracle.rs  r195_wp_state_evolution_bisect.rs  r202_wp_row3_chain.rs  r272_sub_err_reading.rs  r278_error2weight_trace.rs  r31_noise_lossless.rs  r32_noise_bisect.rs  r382_multi_frame.rs  r382_splines.rs  r77_animation_3frame_specdiff.rs  round10_synth_320_drift_bisect.rs  round11_lf_subband.rs  round11_xyb_inverse.rs  round121_llf_from_lf.rs  round129_compose_lf_to_llf.rs  round12_idct_dispatch.rs  round12_lf_dequant.rs  round138_chroma_from_luma.rs  round13_non_dct_idct.rs  round13_vardct_pipeline.rs  round141_gaborish.rs  round144_epf.rs  round147_afv_idct.rs  round14_hf_global_dequant.rs  round159_block_coefficient_loop.rs  round15_d1_past_global_modular.rs  round164_dct16x16_block_coefficient_loop.rs  round16_hfmeta_transforms.rs  round177_non_zeros_grid.rs  round17_d1_bit_trace.rs  round183_per_channel_non_zeros.rs  round18_d1_per_token.rs  round190_per_pass_non_zeros.rs  (+45 more)
tests/fixtures/: alpha_64x64.jxl  animation_3frame.jxl  bit_depth_16.jxl  gradient_64x64.lossless.jxl  gradient_64x64_lossless.jxl  gray_64x64_lossless.jxl  grey_8x8_lossless.jxl  noise_64x64_lossless.jxl  palette_32x32.jxl  palette_32x32.lossless.jxl  pixel_1x1.jxl  vardct_256x256_d1.jxl  vardct_256x256_d3.jxl
tests/fixtures/synth_320_grey/: synth_320.jxl
