[package]
name = "oxideav-jpegxl"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-jpegxl"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG XL (JXL) codec — signature + container detection, SizeHeader + ImageMetadata + FrameHeader + TOC + Modular sub-bitstream decode (FDIS Annex D ANS / prefix entropy + MA-tree + named predictors); round-1 lossless modular encoder for Gray/RGB/RGBA at 8 bpp"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-jpegxl"
keywords = ["multimedia", "image", "jpegxl", "jxl", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-jpegxl` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `decode_one_frame` / `encode_one_frame` API plus crate-local
# `JxlError` / `JxlImage` types and never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm. Optional + gated behind
# the `registry` feature so standalone image-library callers don't pull
# it in.
linkme = { version = "0.3", optional = true }

[features]
default = ["registry"]

# Wires up the `register` entry point + `Decoder` / `Encoder` trait
# implementations against `oxideav-core` so the crate can plug into the
# `oxideav` framework registry. Default-on; turn off for image-library
# use-cases that just want the standalone `decode_one_frame` /
# `encode_one_frame` API.
registry = ["dep:oxideav-core", "dep:linkme"]
