[package]
name = "oxideav-jpegxl"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-jpegxl"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG XL (JXL) codec — RETIRED 2026-05-08 pending strict-isolation cleanroom workspace; current state ships round-1..3 ANS + headers + LfGlobal + GlobalModular wiring only. Rounds 7-11 + encoder rounds 1-6 retired with the libjxl-trace-reverse-engineering.md docs retirement of 2026-05-06."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-jpegxl"
keywords = ["multimedia", "image", "jpegxl", "jxl", "codec"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
# Used only by integration tests to decode the committed `expected.png`
# fixtures and compare them byte-for-byte against our decoder's output.
# `png` is a single-purpose pure-Rust PNG decoder; no codec semantics
# overlap with JPEG XL.
png = "0.18"
